# faas3-cli

./: Cargo.toml  readme.md
dao-demo/: config.toml  main.ts
dao-deno/: config.toml  test.ts
dao-node/: config.toml  main.mjs  test.mjs
demos/dao-node/: config.toml
demos/move-did/: package.json  readme.md
move-did/: config.toml  main.mjs  main.ts  pnpm-lock.yaml  readme.md  test.mjs  test.ts
next-move/: config.toml  package-lock.json  package.json
src/: action.rs  cli.rs  main.rs
