[package]
name = "faas3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
tokio = { version = "1.24.2", features = ["full"] }
dirs = "4.0.0"
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
fake = "2.5.0"
clap = { version = "4.1.4", features = ["derive"] }
toml = "0.7.1"
error-chain = "0.12.4"
regex = "1.7.1"
async-trait = "0.1.66"
